kyverno/kyverno-01/deploy-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redis
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
        team: compliant.with.mutating
    spec:
      containers:
      - image: redis
        name: redis
